--- a/Spotted-it.ipynb
+++ b/Spotted-it.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e07754ee",
+   "id": "279d1f9e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "48a3b8dd",
+   "id": "81e5579a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9254c5a6",
+   "id": "afed9b8c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,8 +51,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "2a2941d7",
+   "execution_count": 16,
+   "id": "e9afc132",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,8 +76,8 @@
     "            img_b_index = row\n",
     "            \n",
     "    # set the images        \n",
-    "    img_a = images[img_a_index]\n",
-    "    img_b = images[img_b_index]\n",
+    "    img_a = images[img_a_index].copy()\n",
+    "    img_b = images[img_b_index].copy()\n",
     "    \n",
     "    cnt_img_a = []\n",
     "    cnt_img_b = []\n",
@@ -85,7 +85,7 @@
     "    min_match = 10 # set a minimum match value to compare to (matches close to 0 are stronger)\n",
     "    \n",
     "    # Threshold area is created as to not use small artifacts\n",
-    "    threshold_area_min = 500       \n",
+    "    threshold_area_min = 1500      \n",
     "    threshold_area_max = 200000\n",
     "    \n",
     "    # compare all contours to one another\n",
@@ -103,9 +103,9 @@
     "                        cnt_img_b = b\n",
     "                        \n",
     "    # Draw the contours and print each image\n",
-    "    cv2.drawContours(img_a,[cnt_img_a],-1,(200,100,0),3)\n",
+    "    cv2.drawContours(img_a,[cnt_img_a],0,(200,100,0),10)\n",
     "    cv2.imshow(\"Image a\",img_a)\n",
-    "    cv2.drawContours(img_b,[cnt_img_b],-1,(200,100,0),3)\n",
+    "    cv2.drawContours(img_b,[cnt_img_b],0,(200,100,0),10)\n",
     "    cv2.imshow(\"Image b\",img_b)\n",
     "    cv2.waitKey(0)\n",
     "    cv2.destroyAllWindows()"
@@ -113,32 +113,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "33b5d8c0",
+   "execution_count": 18,
+   "id": "38fbf078",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run_all():\n",
+    "    '''\n",
+    "    This function will run through every combination of the shapes, including with themselves\n",
+    "    INPUTS: none\n",
+    "    OUTPUTS: output of the run_and_display function  (Produce the two images with their matching contours highlighted)\n",
+    "    RETURNS: none\n",
+    "    '''\n",
+    "    for i in range(len(images)):\n",
+    "        for j in range(i, len(images)):\n",
+    "            run_and_display(str(i), str(j), contours_all, images)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "108eee1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# run_all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "48d64a0c",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Image name 1? 10\n",
-      "Image name 2? 2\n"
+      "Image name 1? 2\n",
+      "Image name 2? 7\n"
      ]
     }
    ],
    "source": [
+    "# Ask for two\n",
     "image_a = input(\"Image name 1? \")\n",
     "image_b = input(\"Image name 2? \")\n",
     "run_and_display(image_a, image_b, contours_all, images)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e9525485",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
