Created spotted-it.py file

--- a/Spotted-it.ipynb
+++ b/Spotted-it.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "279d1f9e",
+   "id": "da435872",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "81e5579a",
+   "id": "c8676837",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "afed9b8c",
+   "id": "e5e14b20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,8 +51,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "e9afc132",
+   "execution_count": 4,
+   "id": "725016a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,8 +113,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "38fbf078",
+   "execution_count": 5,
+   "id": "7059ef58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,8 +132,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "108eee1c",
+   "execution_count": 6,
+   "id": "69c35669",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,21 +142,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "48d64a0c",
+   "execution_count": 7,
+   "id": "d763520d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Image name 1? 2\n",
-      "Image name 2? 7\n"
+      "Image name 1? 3\n",
+      "Image name 2? 6\n"
      ]
     }
    ],
    "source": [
-    "# Ask for two\n",
+    "# Ask for two images to be compares\n",
     "image_a = input(\"Image name 1? \")\n",
     "image_b = input(\"Image name 2? \")\n",
     "run_and_display(image_a, image_b, contours_all, images)"
